log/build_2022-05-04_14-36-30/central/stderr.log
  File "/app/dev_ws/install/central/lib/python3.8/site-packages/central/central_data.py", line 71
    def kalman_filter_1 (data)
                             ^
SyntaxError: invalid syntax

